--- a/.htaccess
+++ b/.htaccess
@@ -22,13 +22,14 @@ RewriteRule ^data/ - [F]
 </FilesMatch>
 
 # API Routes
-RewriteRule ^request-key/?$ api/request-key.php [L]
-RewriteRule ^calculate/?$ api/calculate.php [L]
-RewriteRule ^info/?$ api/info.php [L]
-RewriteRule ^admin-login/?$ api/admin-login.php [L]
-RewriteRule ^admin-keys/?$ api/admin-keys.php [QSA,L]
-RewriteRule ^admin-keys/([^/]+)/block/?$ api/admin-keys.php?key=$1&action=block [QSA,L]
-RewriteRule ^admin-keys/([^/]+)/?$ api/admin-keys.php?key=$1 [QSA,L]
+
+RewriteRule ^request-key/?$ api/api/request-key.php [L]
+RewriteRule ^calculate/?$ api/api/calculate.php [L]
+RewriteRule ^info/?$ api/api/info.php [L]
+RewriteRule ^admin-login/?$ api/api/admin-login.php [L]
+RewriteRule ^admin-keys/?$ api/api/admin-keys.php [QSA,L]
+RewriteRule ^admin-keys/([^/]+)/block/?$ api/api/admin-keys.php?key=$1&action=block [QSA,L]
+RewriteRule ^admin-keys/([^/]+)/?$ api/api/admin-keys.php?key=$1 [QSA,L]
 
 # Admin interface
 RewriteRule ^public/admin.html$ public/admin.html [L]
